--- a/src/quotes/Quotes.css
+++ b/src/quotes/Quotes.css
@@ -2,9 +2,8 @@
   height: 100%;
   width: 100%;
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
+  color: black;
+  font-family: 'Courier New', Courier, monospace;
 }
 
 .without-quotes {
@@ -28,17 +27,16 @@
 }
 
 .container {
-  margin-top: 20px;
   display: flex;
   flex-direction: column;
-  width: 95%;
+  width: 100%;
   height: fit-content;
   justify-content: center;
   align-items: center;
-  background-color: darkblue;
-  border-radius: 15px;
+  background-color: lightgray;
   box-shadow: 50px;
   margin: auto;
+  margin-top: 20px;
 }
 
 .header {
@@ -54,7 +52,7 @@
   display: block;
 }
 .search-bar {
-  background-color: rgb(51, 175, 252);
+  background-color: darkgray;
   border-radius: 5px;
   display: flex;
   justify-content: space-around;
@@ -68,6 +66,7 @@
   width: fit-content;
   height: fit-content;
   margin: 0px;
+  color: whitesmoke;
 }
 
 .search-btn {
@@ -79,15 +78,9 @@
   font-family: inherit;
   background-color: #1a1a1a;
   cursor: pointer;
-  transition: border-color 0.25s;
-  ;
 }
 .search-btn:hover {
-  border-color: #646cff;
-}
-.search-btn:focus,
-.search-btn:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  background-color: rgb(46, 45, 45);
 }
 
 #search-text {
@@ -97,10 +90,13 @@
   margin-right: 5px;
   margin-top: 5px;
   width: 95%;
+  font-family: inherit;
+  text-align: left;
 }
 
 .quote-container {
   background-color: rgb(20, 104, 248);
+  color: white;
   margin: 15px;
   padding: 5px;
   width: 90%;
