--- a/src/css/Global.css
+++ b/src/css/Global.css
@@ -25,3 +25,10 @@ a {
     text-decoration: none;
     color: inherit;
 }
+
+@media screen and (max-width: 900px) {
+    .family-pic {
+      width: auto;
+      height: 400px;
+    }
+  }
