--- a/src/css/Global.css
+++ b/src/css/Global.css
@@ -32,3 +32,12 @@ a {
       height: 400px;
     }
   }
+
+.Link {
+    margin: 10px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.active {
+    color: blue
+}
